feat: add SensitiveWord
