# internal/handler/user/forgot_password_handler.go
@@ -1,7 +1,6 @@
 package user
 
 import (
-	"github.com/colinrs/prompthub/pkg/code"
 	"net/http"
 
 	"github.com/colinrs/prompthub/internal/logic/user"
@@ -11,18 +10,16 @@ import (
 	"github.com/zeromicro/go-zero/rest/httpx"
 )
 
-func UpdateUserHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+func ForgotPasswordHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
-		var req types.UpdateUserRequest
+		var req types.ForgotPasswordnRequest
 		if err := httpx.Parse(r, &req); err != nil {
 			httpy.ResultCtx(r, w, nil, err)
 			return
 		}
-		if svcCtx.DetectorSWD.Detect(req.Name) {
-			httpy.ResultCtx(r, w, nil, code.ErrSensitiveWord)
-		}
-		l := user.NewUpdateUserLogic(r.Context(), svcCtx)
-		err := l.UpdateUser(&req)
-		httpy.ResultCtx(r, w, nil, err)
+
+		l := user.NewForgotPasswordLogic(r.Context(), svcCtx)
+		resp, err := l.ForgotPassword(&req)
+		httpy.ResultCtx(r, w, resp, err)
 	}
 }
